[project]
name = "servc"
version = "0.1.0"
authors = [
  { name="Yusuf Ali", email="ali@yusuf.email" },
]
description = "Server implmentation of services for python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/serv-c/svc-lib-server-python"
"Bug Tracker" = "https://github.com/serv-c/svc-lib-server-python/issues"